--- a/Thesis/refs.bib
+++ b/Thesis/refs.bib
@@ -1,14 +1,3 @@
-@article{royston,
-  title={Regression using fractional polynomials of continuous covariates: parsimonious parametric modelling},
-  author={Royston, Patrick and Altman, Douglas G},
-  journal={Journal of the Royal Statistical Society: Series C (Applied Statistics)},
-  volume={43},
-  number={3},
-  pages={429--453},
-  year={1994},
-  publisher={Wiley Online Library}
-}
-
 @book{dias,
   title={Network meta-analysis for decision-making},
   author={Dias, Sofia and Ades, Anthony E and Welton, Nicky J and Jansen, Jeroen P and Sutton, Alexander J},
@@ -573,3 +562,31 @@
   year={2018},
   publisher={Spandidos Publications}
 }
+
+@article{smith1977,
+  title={Meta-analysis of psychotherapy outcome studies.},
+  author={Smith, Mary L and Glass, Gene V},
+  journal={American psychologist},
+  volume={32},
+  number={9},
+  pages={752},
+  year={1977},
+  publisher={American Psychological Association}
+}
+
+@article{phillippo2019,
+  title={Calibration of Treatment Effects in Network Meta-Analysis Using Individual Patient Data [PhD thesis]. University of Bristol; 2019},
+  author={Phillippo, DM},
+  journal={Available at: https://research-information. bris. ac. uk/en/studentTheses/calibration-of-treatment-effects-innetwork-meta-analysis-using-i}
+}
+
+@inproceedings{sklar1959,
+  title={Fonctions de r{\'e}partition {\`a} n dimensions et leurs marges},
+  author={Sklar, M},
+  booktitle={Annales de l'ISUP},
+  volume={8},
+  number={3},
+  pages={229--231},
+  year={1959}
+}
+
