--- a/Thesis/titlepage.tex
+++ b/Thesis/titlepage.tex
@@ -16,7 +16,7 @@
         
         \vspace*{1.5cm}
         
-        School of Mathematics and Statistics, \\
+        School of Health and Related Research, \\
         The University of Sheffield, \\
         United Kingdom \\
 
@@ -24,9 +24,9 @@
 
         Supervisor: Dr. Kate Ren \\
 
-        Septermber 2024 \\
+        August 2024 \\
 
-        Word Count: 13912\\
+        Word Count: 14780\\
 
         60 Credits \\
         
