--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -116,7 +116,6 @@ colbacktitle=yellow!75!black,fonttitle=\bfseries}{re}
 %\clearpage
 %\includepdf{toMom.pdf}
 
-%\section*{Abstract}
 
 \begin{abstract}
 Pancreatic cancer is a particularly nasty cancer associated with exceptionally poor long term survival. Several Network Meta-Analyses (NMAs) have been conducted to analyse the treatment landscape, but none of these NMAs used the Multilevel Network Meta-Regression (ML-NMR) method. ML-NMR is a relatively new method for performing an NMA by combining individual patient-level data (IPD) and aggregate data. \\
@@ -143,7 +142,7 @@ All R code was developed in R version 4.4.1. \\
   \thispagestyle{empty}
   \vspace*{\fill}
   For my late grandfather, Norman Fredrick Taylor (July 1943 - April 2015).\\
-  %\includegraphics[width = \textwidth]{../figures/gumpy.jpeg}\\
+  \includegraphics[width = \textwidth]{../figures/gumpy.jpeg}\\
   ``But they that wait upon the Lord shall renew their strength; they shall mount up with wings as eagles; they shall run, and not be weary; and they shall walk, and not faint.'' \bibleverse{Isaiah}(40:31)
   \vspace*{\fill}
 \end{center}
