Minor fix before submission

--- a/Thesis/refs.bib
+++ b/Thesis/refs.bib
@@ -577,6 +577,7 @@
 @article{phillippo2019,
   title={Calibration of Treatment Effects in Network Meta-Analysis Using Individual Patient Data [PhD thesis]. University of Bristol; 2019},
   author={Phillippo, DM},
+  year={2019}
   journal={Available at: https://research-information. bris. ac. uk/en/studentTheses/calibration-of-treatment-effects-innetwork-meta-analysis-using-i}
 }
 
